# logging_mod

./: .gitignore  README.md  environment.yml  pyproject.toml
logging_mod/: logger.py  logger_config.json
src/logging_mod/: logger_config.json
